# True-Citation

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
true_citation/: __init__.py  __main__.py  cli.py  config.py  models.py  parsers.py  pdf_parser.py  reporter.py  search.py  verifier.py
